# Poultry_Disease_Classification

./: .gitignore  LICENSE  app.py  dvc.yaml  main.py  pyproject.toml  scores.json  setup.py  template.py
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_prepare_callbacks.ipynb  04_training.ipynb  05_model_evaluation.ipynb
src/CNN_Classifier/: __init__.py
src/CNN_Classifier/components/: data_ingestion.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/CNN_Classifier/config/: configuration.py
src/CNN_Classifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_04_evaluation.py
