[project]
name = "poultry-disease-identification"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.67.1",
    "ensure==1.0.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-box==6.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20260518",
]
